# chacha20blake3

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rakefile  chacha20blake3.gemspec
.github/workflows/: ci.yml
benchmarks/: README.md  bench.rb  compare.rb
ext/chacha20blake3/: Cargo.toml  extconf.rb
ext/chacha20blake3/src/: lib.rs
lib/: chacha20blake3.rb
lib/chacha20blake3/: version.rb
test/: test_chacha20_blake3.rb
